Add CSRF Token as a global javascript  variable
Add CSRF Token as a global javascript variable that can be readily accessible from javascript external files. This is to enable the token being send along in Ajax Request.

--- a/views/layouts/default.jade
+++ b/views/layouts/default.jade
@@ -30,6 +30,8 @@ html(lang='en')
     <script src="/assets/js/html5shiv.js"></script>
     <script src="/assets/js/respond.js"></script>
     <![endif]-->
+    script(type='text/javascript')
+      |var TOKEN = "#{csrftoken}"
   body.no-skin
     // #section:basics/navbar.layout
     block navbar
